--- a/css/skin-design-agency.css
+++ b/css/skin-design-agency.css
@@ -17,6 +17,7 @@ Copyright: ThemeMountain
 9. Title Areas
 10. Slider & Parallax
 11. Lightbox
+12. Plugin Preloader
 13. Rollovers
 14. Homepage
 15. About Pages
