--- a/css/skin-resume-one-page.css
+++ b/css/skin-resume-one-page.css
@@ -515,8 +515,8 @@ body,
 .header .header-inner .navigation > ul > li,
 .header .header-inner .navigation > ul > li > a:not(.button),
 .header .header-inner .dropdown > .nav-icon{
-	height: 12rem;
-	line-height: 11rem;
+	height: 8rem;
+	line-height: 8rem;
 }
 
 /* Compacted Height */
@@ -569,7 +569,7 @@ body,
 	border-top: none;
 }
 .mobile .header .header-inner{
-	border-bottom: 125px solid #fff;
+	border-bottom: 1px solid #eee;
 }
 .mobile .header + .content{
 	padding-top: 0;
@@ -581,7 +581,7 @@ body,
 		background-color: #fff;
 	}
 	.header .header-inner{
-		border-bottom: 125px solid #fff;
+		border-bottom: 1px solid #eee;
 	}
 	.header .header-inner > .nav-bar{
 		padding: 0;
@@ -594,12 +594,12 @@ body,
 
 /* Initial Logo Width */
 .header .logo{
-	width: 18rem;
+	width: 12.5rem;
 }
 
 /* Compacted Header Logo Width */
 .header-compact .logo{
-	width: 18rem;
+	width: 12.5rem;
 }
 
 /* Initial Logo Styling */
@@ -607,7 +607,6 @@ body,
 	display: block !important;
 	position: absolute;
 	top: 0;
-   
 }
 .header-in .logo a,
 .header-out .logo a{
